--- a/ejercicio3/package.json
+++ b/ejercicio3/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "markdown-it": "^13.0.1"
   }
 }
